fixed layout issue and image responsivness

--- a/src/components/content.css
+++ b/src/components/content.css
@@ -1,10 +1,10 @@
 .content {
-    width:79vw;
+    width:80%;
     height:92vh;
     /* background-color:#e8e4c9; */
     background-image: url("https://wallpaperscmscwm.azurewebsites.net/DPM%20X019%20AQUABRUSH%20Light/xboxone.png?download");
     background-repeat: no-repeat;
     background-size: cover;
-
+    object-fit: cover;
     float:right;
 }    
