--- a/src/components/side-bar.css
+++ b/src/components/side-bar.css
@@ -1,5 +1,5 @@
 .sidebar {
-    width: 20vw;
+    width: 20%;
     height:92vh;
     background-color:#87d37b;
 
